k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geth
spec:
  selector:
    app: geth
  ports:
  - protocol: TCP
    port: 8545
    targetPort: 8545
  - protocol: TCP
    port: 8546
    targetPort: 8546
  - protocol: TCP
    port: 8551
    targetPort: 8551
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: node
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 8545
    targetPort: 8545
  - protocol: TCP
    port: 8546
    targetPort: 8546
  - protocol: TCP
    port: 8551
    targetPort: 8551
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: proposer
spec:
  selector:
    app: proposer
  ports:
  - protocol: TCP
    port: 8545
    targetPort: 8545
  - protocol: TCP
    port: 8546
    targetPort: 8546
  - protocol: TCP
    port: 8551
    targetPort: 8551
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: batcher
spec:
  selector:
    app: batcher
  ports:
  - protocol: TCP
    port: 8545
    targetPort: 8545
  - protocol: TCP
    port: 8546
    targetPort: 8546
  - protocol: TCP
    port: 8551
    targetPort: 8551
  type: ClusterIP
